--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
   color: #fff;
   padding: 5px;
 }
+.main-header h2{
+  font-size: 1.3rem;
+}
 
 .main-header-nav{
   width: 300px;
@@ -18,4 +21,39 @@
   align-items: center;
   justify-content: space-between;
   list-style-type: none ;
+  margin-top: 3px;
+}
+
+.main-header-list li a{
+  color: goldenrod;
+}
+.main-header-list li a:hover{
+  color:rgb(12, 126, 12);
+}
+
+.hero-dashboard{
+  width: 100%;
+  height: 620px;
+  background: url('./img/banner.jpg') center/cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-dashboard-box-content{
+  padding: 10px;
+  width: 300px;
+  background-color: black;
+  color: rgb(12, 126, 12);
+  border: 3px solid rgb(11, 11, 12);
+  text-align: center;
+}
+
+.hero-dashboard-box-content h1{
+  margin-bottom: 5px;
+}
+.hero-dashboard-box-content button{
+  margin-top: 10px;
+  background-color: transparent;
+  border: none;
 }
