--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,15 @@
   background-color: transparent;
   border: none;
 }
+
+.sections{
+  width: 100%;
+  background-color: rgb(11, 11, 12);
+  color: #a9a2a2;
+  padding: 10px;
+}
+
+.sections > section {
+  width: 100%;
+  margin-bottom: 5px;
+}
